--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ __pycache__/
 profile_default/
 ipython_config.py
 
-
 # dotfiles
 .env
 .env-dev
@@ -41,3 +40,5 @@ ENV/
 env.bak/
 venv.bak/
 
+# vscode
+.vscode
