--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,14 @@ python_requires = >=3.8
 package_dir =
     = src
 zip_safe = False
+
+[options.extras_require]
+dev =
+    pytest 
+    pytest-asyncio
+    pytest-cov
+    mypy 
+    tox
+
+[options.package_data]
+vtop_handler = py.typed
