--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,13 @@ __pycache__/
 profile_default/
 ipython_config.py
 
-# dotfiles
+# enviroment variables
 .env
 .env-dev
 .env-prod
 .env-test
 
-# folders
+# dev folders
 _captcha
 _responses
 _test
@@ -29,8 +29,9 @@ _test
 *.log
 *.tmp
 
-# profiles
+# profiles and reports
 *.prof
+.coverage
 
 # Environments
 .env
@@ -48,3 +49,9 @@ VITAP_API_VENV/
 # flask sessions
 flask_session/
 .Ds_store
+
+# mypy 
+.mypy_cache/
+
+# pytest 
+.pytest_cache/
