- verisons from req....in file

--- a/requirements.in
+++ b/requirements.in
@@ -1,14 +1,14 @@
-aiohttp==3.8.1
-beautifulsoup4==4.11.1
-flask==2.1.2
+aiohttp
+beautifulsoup4
+flask
 flask[async]
-gunicorn==20.1.0
-lxml==4.8.0
-pandas==1.4.2
-Pillow==9.2.0
-python-dotenv==0.20.0
-Flask-Session==0.4.0
-uvicorn==0.20.0
+gunicorn
+lxml
+pandas
+Pillow
+python-dotenv
+Flask-Session
+uvicorn
 colorama
 html5lib
-pydantic==1.10.6
+pydantic
